@@ -637,3 +637,4 @@ Added a Module Config setting for the number of days of processed mail logs to k
 Added a Cron job to periodically update per-domain SpamAssassin config files from the global configuration, so that configs added by a SpamAssassin upgrade are not missing from the per-domain directories.
 ---- Changes since 3.40 ----
 Added a new template section for defining your own PHP wrapper scripts, for use when PHP is run via CGI or FastCGI.
+When a virtual server with a private IP is added, ping is now used to check if the IP is already in use.
